Email fields added, UI complete

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT=4000
 
+APP_PASSWORD:fllt cmpo rknu xmnd
+
 MONGO_URI=mongodb+srv://rekhiyuvraj:eoSpvZBV9qwb5JMe@secretsanta.jyanfvs.mongodb.net/?retryWrites=true&w=majority
