change to use prod mailtrap smtp

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 PORT=4000
 
-MAILTRAP_USERNAME="6b2df9f81270e2"
-MAILTRAP_PASSWORD="6b0940778d4dec"
+MAILTRAP_USERNAME="api"
+MAILTRAP_PASSWORD="10d05e6d034eca7751c6945155c5123e"
 
 MONGO_URI=mongodb+srv://rekhiyuvraj:eoSpvZBV9qwb5JMe@secretsanta.jyanfvs.mongodb.net/?retryWrites=true&w=majority
